# ccui

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_logo_png.py
src/ccui/: app.py  app.tcss  archive.py  config.py  constants.py  data.py  logo.py  notes.py  store.py  summarize.py  themes.py  titles.py  usage.py
src/ccui/screens/: __init__.py  base.py  dialogs.py  project.py  timeline.py  viewer.py
src/ccui/tabs/: __init__.py  base.py  notes.py  rules.py  sessions.py  skills.py
tests/: conftest.py  test_archive.py  test_config.py  test_config_integration.py  test_data.py  test_dir_name_to_path.py  test_edge_cases.py  test_load_all_sessions.py  test_notes.py  test_store.py  test_summarize.py
