[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccui"
version = "0.1.0"
description = "TUI for browsing and managing Claude Code sessions"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "textual>=0.40",
]

[project.scripts]
ccui = "ccui.app:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ccui*"]
